--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -170,10 +170,15 @@
 // })
         </script>
 
-        <div class="footer">
-          <span>
+        <div class="footer" style="display: flex; justify-content: space-between;">
+          <small>
             lhoraire - Work and Time Management tool
-          </span>
+          </small>
+          <div>
+            <small>MIT License</small>
+            |
+            <small><a target="_blank" href="https://github.com/code-Yking/lhoraire-scheduler">Github</a></small>
+          </div>
         </div>
     </body>
 
