--- a/scheduler/templates/scheduler/dashboard.html
+++ b/scheduler/templates/scheduler/dashboard.html
@@ -60,7 +60,7 @@ body{
   /* max-width: 100%; */
     background-color: #f5f5f5;
     flex-grow: 1;
-    margin-top: auto;
+    /* margin-top: auto; */
     margin-bottom: 20px;
 }
 
@@ -79,19 +79,20 @@ body{
 
 
 {% if to_reschedule %}
-.column-container:hover > .add-task {
+.column-container:nth-of-type(n+3):hover > .add-task {
     display: block;
 }
 {% else %}
-{% for day, data in schedule.items%}
-{% if data.extra_hours %}
 
-.column-container#day-{{day}}:hover > .add-task{
-  display: block;
-}
+  {% for day, data in schedule.items%}
+    {% if data.extra_hours %}
 
-{% endif %}
-{% endfor %}
+    .column-container#day-{{day}}:nth-of-type(n+3):hover > .add-task{
+      display: block;
+    }
+
+    {% endif %}
+  {% endfor %}
 
 {% endif %}
 
