--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -1,7 +1,8 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-    <head>
+  <head>
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <title>lhoraire</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
@@ -43,14 +44,17 @@
         </style>
         {% block extrastyle%}
         {% endblock %}
+        <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+  <link rel="stylesheet" href="/resources/demos/style.css">
     </head>
 
     <body>
-        <!-- <img src="{% static 'icon1.svg' %}"/> -->
+        <!-- <img src="{% static 'main/img/icon.png' %}"/> -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light" style="">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">
-                <!-- <img src="{% static 'main/img/icon2.png' %}" alt="" width="30" height="30" class="d-inline-block align-text-top"> -->
+              <a class="navbar-brand" href="https://lhoraire.work">
+                <img src="{% static 'main/img/icon3.png' %}" alt="" width="30" height="30" class="d-inline-block align-text-center">
                 lhoraire
               </a>
               {% if user.is_authenticated and not user_not_complete %}
@@ -75,8 +79,8 @@
               Tasks that are unshedulable because of the set limitatiosn will be found here
               {% endif %}
               ">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-subtract" viewBox="0 0 16 16">
-                <path d="M0 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v2h2a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2v-2H2a2 2 0 0 1-2-2V2zm2-1a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H2z"/>
+              <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-book-half" viewBox="0 0 16 16">
+                <path d="M8.5 2.687c.654-.689 1.782-.886 3.112-.752 1.234.124 2.503.523 3.388.893v9.923c-.918-.35-2.107-.692-3.287-.81-1.094-.111-2.278-.039-3.213.492V2.687zM8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783z"/>
               </svg>
               <span class="position-absolute top-0 start-100 translate-middle p-2 border-light {% if to_reschedule %} bg-danger border rounded-circle {% endif %}">
                 <span class="visually-hidden">New alerts</span>
@@ -116,8 +120,8 @@
               Tasks that are unshedulable because of the set limitatiosn will be found here
               {% endif %}
               ">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-subtract" viewBox="0 0 16 16">
-                <path d="M0 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v2h2a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2v-2H2a2 2 0 0 1-2-2V2zm2-1a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H2z"/>
+              <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-book-half" viewBox="0 0 16 16">
+                <path d="M8.5 2.687c.654-.689 1.782-.886 3.112-.752 1.234.124 2.503.523 3.388.893v9.923c-.918-.35-2.107-.692-3.287-.81-1.094-.111-2.278-.039-3.213.492V2.687zM8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783z"/>
               </svg>
               <span class="position-absolute top-0 start-100 translate-middle p-2 border-light {% if to_reschedule %} bg-danger border rounded-circle {% endif %}">
                 <span class="visually-hidden">New alerts</span>
@@ -137,7 +141,7 @@
         {% if messages %}
         {% for message in messages %}
         <div id="errorToast"  class="toast align-items-center text-white bg-danger border-0 position-fixed" 
-        role="alert" aria-live="assertive" aria-atomic="true" style="bottom: 5px; right: 5px;">
+        role="alert" aria-live="assertive" aria-atomic="true" data-bs-autohide="false" style="bottom: 5px; right: 5px;">
           <div class="d-flex">
             <div class="toast-body">
               {{message}}
@@ -160,6 +164,15 @@
           var toast = new bootstrap.Toast(errorToast)
 
           toast.show()
+
+          $(document).ready(function () {
+            $("#datepicker").datepicker({
+                minDate: 2,
+                maxDate: '+3M'
+            });
+
+          }
+          );
         //   $(document).ready(function(){
         //   $('a').click(()=>{
         //     alert('hi')
@@ -171,13 +184,19 @@
         </script>
 
         <div class="footer" style="display: flex; justify-content: space-between;">
-          <small>
-            lhoraire - Work and Time Management tool
-          </small>
+          <div>
+
+            <img src="{% static 'main/img/icondark1.png' %}" alt="" width="20" height="20" class="d-inline-block align-text-center">
+            <small>
+              Work and Time Management tool
+            </small>
+          </div>
           <div>
             <small>MIT License</small>
             |
             <small><a target="_blank" href="https://github.com/code-Yking/lhoraire-scheduler">Github</a></small>
+            |
+            <small><a href="mailto:dev@lhoraire.work?subject = Feedback&body =">Send Feedback</a></small>
           </div>
         </div>
     </body>
