--- a/scheduler/templates/scheduler/dashboard.html
+++ b/scheduler/templates/scheduler/dashboard.html
@@ -58,7 +58,7 @@ body{
   justify-content: flex-start;
   overflow: scroll;
   /* max-width: 100%; */
-    background-color: #f5f5f5;
+    background-color: aliceblue;
     flex-grow: 1;
     /* margin-top: auto; */
     margin-bottom: 20px;
