--- a/templates/home.html
+++ b/templates/home.html
@@ -15,7 +15,9 @@
   flex-direction: column;
   max-height:100%
 }
-
+.home{
+    background-attachment: fixed;
+}
 
 .card{
   margin-right: auto;
@@ -23,7 +25,7 @@
 }
 }
     .home{
-        background-attachment: fixed;
+        
         background-image: url("{% static 'main/img/1x/Asset 9.png' %}");
         background-repeat: no-repeat;
         background-size: contain;
