--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -17,7 +17,7 @@
             display: flex;
             flex-direction: column;
             height: 100%;
-            background-color: mintcream;
+            background-color: aliceblue;
           }
           body{
             min-height: 100%;
