Changed progress placeholder

--- a/scheduler/templates/scheduler/dashboard.html
+++ b/scheduler/templates/scheduler/dashboard.html
@@ -173,7 +173,7 @@ body{
           {% endfor %}
         </ol>
         {%else%}
-        <p>Due dates in the next 10 days will be found here.</p>
+        <p>Progress for tasks that are started will be here.</p>
         {% endif%}
     </div>
 </div>
