--- a/scheduler/templates/scheduler/dashboard.html
+++ b/scheduler/templates/scheduler/dashboard.html
@@ -147,8 +147,8 @@ body{
         <ol class="list-group list-group-flush">
             {% for name, days_remain in dues_comming_up.items %}
             <li class="list-group-item d-flex justify-content-between align-items-start">
-              <div class="ms-2 me-auto">
-                <div class="fw-bold" style="text-overflow: ellipsis;">{{name}}</div>
+              <div class="ms-2 me-auto" style="overflow:hidden;">
+                <div class="fw-bold" style="text-overflow: ellipsis; white-space: nowrap; overflow:hidden; flex-shrink:3;">{{name}}</div>
               </div>
               <span class="badge bg-primary rounded-pill">{{ days_remain }} days</span>
             </li>
@@ -165,8 +165,8 @@ body{
       <ol class="list-group list-group-flush">
           {% for name, percent_done in progress.items %}
           <li class="list-group-item d-flex justify-content-between align-items-start">
-            <div class="ms-2 me-auto">
-              <div class="fw-bold" style="text-overflow: ellipsis;">{{name}}</div>
+            <div class="ms-2 me-auto" style="overflow:hidden;">
+              <div class="fw-bold" style="text-overflow: ellipsis; white-space: nowrap; overflow:hidden; flex-shrink:3;">{{name}}</div>
             </div>
             <span class="badge bg-primary rounded-pill">{{ percent_done|mul:100 }}%</span>
           </li>
@@ -333,39 +333,7 @@ body{
 {% endblock %}
 
 {% block create_modal %}
-    <!-- Modal -->
-<div class="modal fade" id="createTask" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-<div class="modal-dialog modal-dialog-scrollable">
-  <div class="modal-content">
-    <div class="modal-header">
-      <h5 class="modal-title" id="staticBackdropLabel">Create New Task</h5>
-      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-    </div>
-    <form action="{% url 'scheduler:create' %}" method="post">
-    <div class="modal-body">
-            {% csrf_token %}
-            {{ formset.management_form }}
-            {% for form in formset %}
-            {% for field in form %}
-            <div class="mb-3">
-                {{ field.errors }}
-                <label class="form-label" for="" >{{field.label_tag}}</label>
-                 {{ field }}
-            </div>
-            {% endfor %}
-            {% endfor %}
 
-
-            <!-- <input type="submit" value="Login"> -->
-        </div>
-        <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="submit" class="btn btn-primary">Add</button>
-        </div>
-    </form>
-  </div>
-</div>
-</div>
 
 <div class="modal fade" id="rescheduler-modal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
     <div class="modal-dialog">
