--- a/templates/home.html
+++ b/templates/home.html
@@ -66,7 +66,7 @@
         <span>&nbsp; lhoraire</span>
     </div>
     <div class="card" style="margin-top: 20px; width: 400px; ">
-        <p>Work Smarter by using a time management tool that will spread out your work the way you desire. Automatically!</p>
+        <p>Work smarter by using a time management tool that will spread out your work the way you desire. Automatically!</p>
     
     <div style="display: flex;" class="joining">
         <a href="/accounts/signup" role="button" class="btn btn-primary">Sign Up</a>
