--- a/scheduler/templates/scheduler/user_info.html
+++ b/scheduler/templates/scheduler/user_info.html
@@ -21,7 +21,7 @@
             </div>
           </nav>
         {% endif %} -->
-        <div class="container" style="display: flex; flex:0 0 600; flex-direction: column; justify-content: center; margin-top: 20px;">
+        <div class="container" style="display: flex; flex:0 0 600; flex-direction: column; justify-content: center; margin-top: 20px; background-color: white; padding:20px; border-radius: 10px;">
             {% if user_not_complete %}
             <div class="alert alert-success" role="alert">
                 Account has been successfully created!
