--- a/scheduler/templates/scheduler/dashboard.html
+++ b/scheduler/templates/scheduler/dashboard.html
@@ -18,7 +18,8 @@ body{
 .card-container{
   margin-top: 20px; 
   display: flex; 
-  max-height:30%
+  max-height:30%;
+  justify-content: space-around;
 }
 
 .cards{
@@ -28,10 +29,17 @@ body{
     padding: 20px 10px;
     border-radius: 10px;
     margin-top: 20px;
-    margin-right: 20px
+    /* margin-right: 0px */
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (min-width: 768px) and (max-width:992px){
+  .cards{
+  margin-right: 20px;
+}
+}
+
+
+@media only screen and (max-width: 768px){
   body, html{
     display: block;
   }
@@ -40,7 +48,8 @@ body{
   margin-top: 20px; 
   display: flex; 
   flex-direction: column;
-  max-height:100%
+  max-height:100%;
+  justify-content: normal;
 }
 
 .cards{
@@ -290,14 +299,14 @@ body{
             // random defualt color for the selector palatte
             // PALLATE = ['#004d65', '#ff4013', '#5e30eb', '#cc0000']
             columnContainerCount(this)
-            $('.form-control-color').val("#" + Math.floor(Math.random()*16777215).toString(16));
-            $('.form-control-color').trigger('change');
+            // $('.form-control-color').val("#" + Math.floor(Math.random()*16777215).toString(16));
+            // $('.form-control-color').trigger('change');
 
             // minimum input date of tomorrow
-            $("#datepicker").datepicker({
-                minDate: 2,
-                maxDate: '+3M'
-            });
+            // $("#datepicker").datepicker({
+            //     minDate: 2,
+            //     maxDate: '+3M'
+            // });
 
             $('.schedule-graph').children().eq(1).css('background-color','#C3E6FE');
 
