--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -67,7 +67,7 @@
               <div style="display: flex; margin-left:auto">
               <nav id="n1">
                <a tabindex="0" role="button" class="btn btn-outline-secondary position-relative" style="margin-right: 20px;"
-              data-bs-toggle="popover" title="Unschedulable Tasks" data-bs-html="true" data-bs-sanitize="false" data-bs-content="
+              data-bs-toggle="popover" title="Non-Schedulable Tasks" data-bs-html="true" data-bs-sanitize="false" data-bs-content="
               {% if to_reschedule %}
               <div>
                 <ul class='list-group'>
@@ -82,11 +82,11 @@
                 </ul>
               </div>
               {% else %}
-              Tasks that are unshedulable because of the set limitatiosn will be found here
+              Tasks that couldn't be scheduled because of the limitations that are set will be found here.
               {% endif %}
               ">
               <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-book-half" viewBox="0 0 16 16">
-                <path d="M8.5 2.687c.654-.689 1.782-.886 3.112-.752 1.234.124 2.503.523 3.388.893v9.923c-.918-.35-2.107-.692-3.287-.81-1.094-.111-2.278-.039-3.213.492V2.687zM8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783z"/>
+                <path d="M0 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v2h2a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2v-2H2a2 2 0 0 1-2-2V2zm2-1a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H2z"/>
               </svg>
               <span class="position-absolute top-0 start-100 translate-middle p-2 border-light {% if to_reschedule %} bg-danger border rounded-circle {% endif %}">
                 <span class="visually-hidden">New alerts</span>
@@ -108,7 +108,7 @@
               </div>
               <nav id="n2">
               <a tabindex="0" role="button" class="btn btn-outline-secondary position-relative" style="margin-right: 20px;"
-              data-bs-toggle="popover" title="Unschedulable Tasks" data-bs-html="true" data-bs-sanitize="false" data-bs-content="
+              data-bs-toggle="popover" title="Non-Schedulable Tasks" data-bs-html="true" data-bs-sanitize="false" data-bs-content="
               {% if to_reschedule %}
               <div>
                 <ul class='list-group'>
@@ -123,11 +123,11 @@
                 </ul>
               </div>
               {% else %}
-              Tasks that are unshedulable because of the set limitatiosn will be found here
+              Tasks that couldn't be scheduled because of the limitations that are set will be found here.
               {% endif %}
               ">
               <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-book-half" viewBox="0 0 16 16">
-                <path d="M8.5 2.687c.654-.689 1.782-.886 3.112-.752 1.234.124 2.503.523 3.388.893v9.923c-.918-.35-2.107-.692-3.287-.81-1.094-.111-2.278-.039-3.213.492V2.687zM8 1.783C7.015.936 5.587.81 4.287.94c-1.514.153-3.042.672-3.994 1.105A.5.5 0 0 0 0 2.5v11a.5.5 0 0 0 .707.455c.882-.4 2.303-.881 3.68-1.02 1.409-.142 2.59.087 3.223.877a.5.5 0 0 0 .78 0c.633-.79 1.814-1.019 3.222-.877 1.378.139 2.8.62 3.681 1.02A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.293-.455c-.952-.433-2.48-.952-3.994-1.105C10.413.809 8.985.936 8 1.783z"/>
+                <path d="M0 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v2h2a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2v-2H2a2 2 0 0 1-2-2V2zm2-1a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H2z"/>
               </svg>
               <span class="position-absolute top-0 start-100 translate-middle p-2 border-light {% if to_reschedule %} bg-danger border rounded-circle {% endif %}">
                 <span class="visually-hidden">New alerts</span>
@@ -201,6 +201,17 @@
         {% block extrascript %}
         {% endblock %}
         <script>
+          $(document).ready(function () {
+            $(".datepicker").datepicker({
+                minDate: 2,
+                maxDate: '+3M'
+            });
+            
+            $('.form-control-color').val("#" + Math.floor(Math.random()*16777215).toString(16));
+            $('.form-control-color').trigger('change');
+          }
+          );
+
           var popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'))
           var popoverList = popoverTriggerList.map(function (popoverTriggerEl) {
             return new bootstrap.Popover(popoverTriggerEl)
@@ -211,14 +222,6 @@
 
           toast.show()
 
-          $(document).ready(function () {
-            $("#datepicker").datepicker({
-                minDate: 2,
-                maxDate: '+3M'
-            });
-
-          }
-          );
         //   $(document).ready(function(){
         //   $('a').click(()=>{
         //     alert('hi')
@@ -241,8 +244,8 @@
             <small>MIT License</small>
             |
             <small><a target="_blank" href="https://github.com/code-Yking/lhoraire-web">GitHub</a></small>
-            |
-            <small><a href="mailto:dev@lhoraire.work?subject = Feedback&body =">Send Feedback</a></small>
+            <!-- | -->
+            <!-- <small><a href="mailto:dev@lhoraire.work?subject = Feedback&body =">Send Feedback</a></small> -->
           </div>
         </div>
     </body>
