Fixed background wrong named

--- a/templates/home.html
+++ b/templates/home.html
@@ -17,7 +17,7 @@
 }
 .home{
     background-attachment: fixed;
-        background-image: url("{% static 'main/img/1x/Asset 9 Copy.png' %}") !important
+        background-image: url("{% static 'main/img/home_back_small.png' %}") !important
 }
 
 .card{
@@ -30,7 +30,7 @@
 }
 }
     .home{
-        background-image: url("{% static 'main/img/1x/Asset 9.png' %}");
+        background-image: url("{% static 'main/img/home_back.png' %}");
         background-repeat: no-repeat;
         background-size: contain;
         background-position: bottom;
