Fixed redirect error; editing error; color jquery

--- a/scheduler/templates/scheduler/edit.html
+++ b/scheduler/templates/scheduler/edit.html
@@ -31,6 +31,10 @@
                              {{ field }}
                         </div>
                         {% endfor %}
+
+                        {% for hidden in form.hidden_fields %}
+                            {{ hidden }}
+                        {% endfor %}
                         </div>
                     </div>
                   </div>
