--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -207,8 +207,8 @@
                 maxDate: '+3M'
             });
             
-            $('.form-control-color').val("#" + Math.floor(Math.random()*16777215).toString(16));
-            $('.form-control-color').trigger('change');
+            $('#createTask .form-control-color').val("#" + Math.floor(Math.random()*16777215).toString(16));
+            $('#createTask .form-control-color').trigger('change');
           }
           );
 
