Messages; validation backend

--- a/accounts/templates/accounts/accounts.html
+++ b/accounts/templates/accounts/accounts.html
@@ -55,7 +55,7 @@ body{
     <h1>Sign Up</h1>
     <div class="alert alert-secondary" role="alert">
         Get a free account to use lhoraire time mananagement tool. <br>
-        Chose a unique username and a password that is at least 8 characters long.
+        Choose a unique username and a password that is at least 8 characters long.
       </div>
     {% endif %}
 
