Cleaned code; messages for greater than 24hrs

--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -58,7 +58,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light" style="">
             <div class="container-fluid">
               <a class="navbar-brand" href="https://lhoraire.work">
-                <img src="{% static 'main/img/icon3.png' %}" alt="" width="30" height="30" class="d-inline-block align-text-center">
+                <img src="{% static 'main/img/icon3.png' %}" alt="logo" width="30" height="30" class="d-inline-block align-text-center">
                 {% if request.path != '/' %}
                 lhoraire
                 {% endif %}
@@ -235,7 +235,7 @@
         <div class="footer" style="display: flex; justify-content: space-between;">
           <div>
 
-            <img src="{% static 'main/img/icondark1.png' %}" alt="" width="20" height="20" class="d-inline-block align-text-center">
+            <img src="{% static 'main/img/icondark1.png' %}" alt="lhoraire" width="20" height="20" class="d-inline-block align-text-center">
             <small>
               Work and Time Management tool
             </small>
