--- a/templates/home.html
+++ b/templates/home.html
@@ -76,7 +76,7 @@
 
 <div class='container-fluid home'>
     <div style="display: flex; align-items: center; justify-content: space-around;">
-        <img src="{% static 'main/img/icon3.png' %}" width="100" height="100"/> 
+        <img src="{% static 'main/img/icon3.png' %}" alt="logo" width="100" height="100"/> 
         <span>&nbsp;lhoraire</span>
     </div>
     <div class="card" id="summary" style="margin-top: 20px;">
